// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`ResistorForm should render a 3-band resistor 1`] = `
<form
  className="resistor-form"
>
  <div
    className="row"
  >
    <div
      className="form-group col-sm-6 offset-sm-3 col-md-2 offset-md-5"
    >
      <label>
        Strips
        <select
          className="form-control"
          name="bands"
          onChange={[Function]}
          value={3}
        >
          <option
            value={3}
          >
            3
            -strip
          </option>
          <option
            value={4}
          >
            4
            -strip
          </option>
          <option
            value={5}
          >
            5
            -strip
          </option>
          <option
            value={6}
          >
            6
            -strip
          </option>
        </select>
      </label>
    </div>
  </div>
  <div
    className="row"
  >
    <div
      className="col-xs-6 col-sm-2 offset-sm-3"
    >
      <BandSelector
        label="1st Digit"
        name="digit1"
        onChange={[Function]}
        options={
          Array [
            Object {
              "className": "brown",
              "label": "brown",
              "value": 1,
            },
            Object {
              "className": "red",
              "label": "red",
              "value": 2,
            },
            Object {
              "className": "orange",
              "label": "orange",
              "value": 3,
            },
            Object {
              "className": "yellow",
              "label": "yellow",
              "value": 4,
            },
            Object {
              "className": "green",
              "label": "green",
              "value": 5,
            },
            Object {
              "className": "blue",
              "label": "blue",
              "value": 6,
            },
            Object {
              "className": "violet",
              "label": "violet",
              "value": 7,
            },
            Object {
              "className": "gray",
              "label": "gray",
              "value": 8,
            },
            Object {
              "className": "white",
              "label": "white",
              "value": 9,
            },
          ]
        }
        value={1}
      />
    </div>
    <div
      className="col-xs-6 col-sm-2"
    >
      <BandSelector
        label="2nd Digit"
        name="digit2"
        onChange={[Function]}
        options={
          Array [
            Object {
              "className": "black",
              "label": "black",
              "value": 0,
            },
            Object {
              "className": "brown",
              "label": "brown",
              "value": 1,
            },
            Object {
              "className": "red",
              "label": "red",
              "value": 2,
            },
            Object {
              "className": "orange",
              "label": "orange",
              "value": 3,
            },
            Object {
              "className": "yellow",
              "label": "yellow",
              "value": 4,
            },
            Object {
              "className": "green",
              "label": "green",
              "value": 5,
            },
            Object {
              "className": "blue",
              "label": "blue",
              "value": 6,
            },
            Object {
              "className": "violet",
              "label": "violet",
              "value": 7,
            },
            Object {
              "className": "gray",
              "label": "gray",
              "value": 8,
            },
            Object {
              "className": "white",
              "label": "white",
              "value": 9,
            },
          ]
        }
        value={0}
      />
    </div>
    <div
      className="col-xs-6 col-sm-2"
    >
      <BandSelector
        label="Multiplier"
        name="multiplier"
        onChange={[Function]}
        options={
          Array [
            Object {
              "className": "black",
              "label": "black",
              "value": 0,
            },
            Object {
              "className": "brown",
              "label": "brown",
              "value": 1,
            },
            Object {
              "className": "red",
              "label": "red",
              "value": 2,
            },
            Object {
              "className": "orange",
              "label": "orange",
              "value": 3,
            },
            Object {
              "className": "yellow",
              "label": "yellow",
              "value": 4,
            },
            Object {
              "className": "green",
              "label": "green",
              "value": 5,
            },
            Object {
              "className": "blue",
              "label": "blue",
              "value": 6,
            },
            Object {
              "className": "violet",
              "label": "violet",
              "value": 7,
            },
            Object {
              "className": "gray",
              "label": "gray",
              "value": 8,
            },
            Object {
              "className": "white",
              "label": "white",
              "value": 9,
            },
            Object {
              "className": "gold",
              "label": "gold",
              "value": -1,
            },
            Object {
              "className": "silver",
              "label": "silver",
              "value": -2,
            },
          ]
        }
        value={0}
      />
    </div>
  </div>
</form>
`;

exports[`ResistorForm should render a 4-band resistor 1`] = `
<form
  className="resistor-form"
>
  <div
    className="row"
  >
    <div
      className="form-group col-sm-6 offset-sm-3 col-md-2 offset-md-5"
    >
      <label>
        Strips
        <select
          className="form-control"
          name="bands"
          onChange={[Function]}
          value={4}
        >
          <option
            value={3}
          >
            3
            -strip
          </option>
          <option
            value={4}
          >
            4
            -strip
          </option>
          <option
            value={5}
          >
            5
            -strip
          </option>
          <option
            value={6}
          >
            6
            -strip
          </option>
        </select>
      </label>
    </div>
  </div>
  <div
    className="row"
  >
    <div
      className="col-xs-6 col-sm-2 offset-sm-2"
    >
      <BandSelector
        label="1st Digit"
        name="digit1"
        onChange={[Function]}
        options={
          Array [
            Object {
              "className": "brown",
              "label": "brown",
              "value": 1,
            },
            Object {
              "className": "red",
              "label": "red",
              "value": 2,
            },
            Object {
              "className": "orange",
              "label": "orange",
              "value": 3,
            },
            Object {
              "className": "yellow",
              "label": "yellow",
              "value": 4,
            },
            Object {
              "className": "green",
              "label": "green",
              "value": 5,
            },
            Object {
              "className": "blue",
              "label": "blue",
              "value": 6,
            },
            Object {
              "className": "violet",
              "label": "violet",
              "value": 7,
            },
            Object {
              "className": "gray",
              "label": "gray",
              "value": 8,
            },
            Object {
              "className": "white",
              "label": "white",
              "value": 9,
            },
          ]
        }
        value={1}
      />
    </div>
    <div
      className="col-xs-6 col-sm-2"
    >
      <BandSelector
        label="2nd Digit"
        name="digit2"
        onChange={[Function]}
        options={
          Array [
            Object {
              "className": "black",
              "label": "black",
              "value": 0,
            },
            Object {
              "className": "brown",
              "label": "brown",
              "value": 1,
            },
            Object {
              "className": "red",
              "label": "red",
              "value": 2,
            },
            Object {
              "className": "orange",
              "label": "orange",
              "value": 3,
            },
            Object {
              "className": "yellow",
              "label": "yellow",
              "value": 4,
            },
            Object {
              "className": "green",
              "label": "green",
              "value": 5,
            },
            Object {
              "className": "blue",
              "label": "blue",
              "value": 6,
            },
            Object {
              "className": "violet",
              "label": "violet",
              "value": 7,
            },
            Object {
              "className": "gray",
              "label": "gray",
              "value": 8,
            },
            Object {
              "className": "white",
              "label": "white",
              "value": 9,
            },
          ]
        }
        value={0}
      />
    </div>
    <div
      className="col-xs-6 col-sm-2"
    >
      <BandSelector
        label="Multiplier"
        name="multiplier"
        onChange={[Function]}
        options={
          Array [
            Object {
              "className": "black",
              "label": "black",
              "value": 0,
            },
            Object {
              "className": "brown",
              "label": "brown",
              "value": 1,
            },
            Object {
              "className": "red",
              "label": "red",
              "value": 2,
            },
            Object {
              "className": "orange",
              "label": "orange",
              "value": 3,
            },
            Object {
              "className": "yellow",
              "label": "yellow",
              "value": 4,
            },
            Object {
              "className": "green",
              "label": "green",
              "value": 5,
            },
            Object {
              "className": "blue",
              "label": "blue",
              "value": 6,
            },
            Object {
              "className": "violet",
              "label": "violet",
              "value": 7,
            },
            Object {
              "className": "gray",
              "label": "gray",
              "value": 8,
            },
            Object {
              "className": "white",
              "label": "white",
              "value": 9,
            },
            Object {
              "className": "gold",
              "label": "gold",
              "value": -1,
            },
            Object {
              "className": "silver",
              "label": "silver",
              "value": -2,
            },
          ]
        }
        value={0}
      />
    </div>
    <div
      className="col-xs-6 col-sm-2"
    >
      <BandSelector
        label="Tolerance"
        name="tolerance"
        onChange={[Function]}
        options={
          Array [
            Object {
              "className": "brown",
              "label": "brown",
              "value": 1,
            },
            Object {
              "className": "red",
              "label": "red",
              "value": 2,
            },
            Object {
              "className": "green",
              "label": "green",
              "value": 0.5,
            },
            Object {
              "className": "blue",
              "label": "blue",
              "value": 0.25,
            },
            Object {
              "className": "violet",
              "label": "violet",
              "value": 0.1,
            },
            Object {
              "className": "gold",
              "label": "gold",
              "value": 5,
            },
            Object {
              "className": "silver",
              "label": "silver",
              "value": 10,
            },
          ]
        }
        value={5}
      />
    </div>
  </div>
</form>
`;

exports[`ResistorForm should render a 5-band resistor 1`] = `
<form
  className="resistor-form"
>
  <div
    className="row"
  >
    <div
      className="form-group col-sm-6 offset-sm-3 col-md-2 offset-md-5"
    >
      <label>
        Strips
        <select
          className="form-control"
          name="bands"
          onChange={[Function]}
          value={5}
        >
          <option
            value={3}
          >
            3
            -strip
          </option>
          <option
            value={4}
          >
            4
            -strip
          </option>
          <option
            value={5}
          >
            5
            -strip
          </option>
          <option
            value={6}
          >
            6
            -strip
          </option>
        </select>
      </label>
    </div>
  </div>
  <div
    className="row"
  >
    <div
      className="col-xs-6 col-sm-2 offset-sm-1"
    >
      <BandSelector
        label="1st Digit"
        name="digit1"
        onChange={[Function]}
        options={
          Array [
            Object {
              "className": "brown",
              "label": "brown",
              "value": 1,
            },
            Object {
              "className": "red",
              "label": "red",
              "value": 2,
            },
            Object {
              "className": "orange",
              "label": "orange",
              "value": 3,
            },
            Object {
              "className": "yellow",
              "label": "yellow",
              "value": 4,
            },
            Object {
              "className": "green",
              "label": "green",
              "value": 5,
            },
            Object {
              "className": "blue",
              "label": "blue",
              "value": 6,
            },
            Object {
              "className": "violet",
              "label": "violet",
              "value": 7,
            },
            Object {
              "className": "gray",
              "label": "gray",
              "value": 8,
            },
            Object {
              "className": "white",
              "label": "white",
              "value": 9,
            },
          ]
        }
        value={1}
      />
    </div>
    <div
      className="col-xs-6 col-sm-2"
    >
      <BandSelector
        label="2nd Digit"
        name="digit2"
        onChange={[Function]}
        options={
          Array [
            Object {
              "className": "black",
              "label": "black",
              "value": 0,
            },
            Object {
              "className": "brown",
              "label": "brown",
              "value": 1,
            },
            Object {
              "className": "red",
              "label": "red",
              "value": 2,
            },
            Object {
              "className": "orange",
              "label": "orange",
              "value": 3,
            },
            Object {
              "className": "yellow",
              "label": "yellow",
              "value": 4,
            },
            Object {
              "className": "green",
              "label": "green",
              "value": 5,
            },
            Object {
              "className": "blue",
              "label": "blue",
              "value": 6,
            },
            Object {
              "className": "violet",
              "label": "violet",
              "value": 7,
            },
            Object {
              "className": "gray",
              "label": "gray",
              "value": 8,
            },
            Object {
              "className": "white",
              "label": "white",
              "value": 9,
            },
          ]
        }
        value={0}
      />
    </div>
    <div
      className="col-xs-6 col-sm-2"
    >
      <BandSelector
        label="3rd Digit"
        name="digit3"
        onChange={[Function]}
        options={
          Array [
            Object {
              "className": "black",
              "label": "black",
              "value": 0,
            },
            Object {
              "className": "brown",
              "label": "brown",
              "value": 1,
            },
            Object {
              "className": "red",
              "label": "red",
              "value": 2,
            },
            Object {
              "className": "orange",
              "label": "orange",
              "value": 3,
            },
            Object {
              "className": "yellow",
              "label": "yellow",
              "value": 4,
            },
            Object {
              "className": "green",
              "label": "green",
              "value": 5,
            },
            Object {
              "className": "blue",
              "label": "blue",
              "value": 6,
            },
            Object {
              "className": "violet",
              "label": "violet",
              "value": 7,
            },
            Object {
              "className": "gray",
              "label": "gray",
              "value": 8,
            },
            Object {
              "className": "white",
              "label": "white",
              "value": 9,
            },
          ]
        }
        value={0}
      />
    </div>
    <div
      className="col-xs-6 col-sm-2"
    >
      <BandSelector
        label="Multiplier"
        name="multiplier"
        onChange={[Function]}
        options={
          Array [
            Object {
              "className": "black",
              "label": "black",
              "value": 0,
            },
            Object {
              "className": "brown",
              "label": "brown",
              "value": 1,
            },
            Object {
              "className": "red",
              "label": "red",
              "value": 2,
            },
            Object {
              "className": "orange",
              "label": "orange",
              "value": 3,
            },
            Object {
              "className": "yellow",
              "label": "yellow",
              "value": 4,
            },
            Object {
              "className": "green",
              "label": "green",
              "value": 5,
            },
            Object {
              "className": "blue",
              "label": "blue",
              "value": 6,
            },
            Object {
              "className": "violet",
              "label": "violet",
              "value": 7,
            },
            Object {
              "className": "gray",
              "label": "gray",
              "value": 8,
            },
            Object {
              "className": "white",
              "label": "white",
              "value": 9,
            },
            Object {
              "className": "gold",
              "label": "gold",
              "value": -1,
            },
            Object {
              "className": "silver",
              "label": "silver",
              "value": -2,
            },
          ]
        }
        value={0}
      />
    </div>
    <div
      className="col-xs-6 col-sm-2"
    >
      <BandSelector
        label="Tolerance"
        name="tolerance"
        onChange={[Function]}
        options={
          Array [
            Object {
              "className": "brown",
              "label": "brown",
              "value": 1,
            },
            Object {
              "className": "red",
              "label": "red",
              "value": 2,
            },
            Object {
              "className": "green",
              "label": "green",
              "value": 0.5,
            },
            Object {
              "className": "blue",
              "label": "blue",
              "value": 0.25,
            },
            Object {
              "className": "violet",
              "label": "violet",
              "value": 0.1,
            },
            Object {
              "className": "gold",
              "label": "gold",
              "value": 5,
            },
            Object {
              "className": "silver",
              "label": "silver",
              "value": 10,
            },
          ]
        }
        value={10}
      />
    </div>
  </div>
</form>
`;

exports[`ResistorForm should render a 6-band resistor 1`] = `
<form
  className="resistor-form"
>
  <div
    className="row"
  >
    <div
      className="form-group col-sm-6 offset-sm-3 col-md-2 offset-md-5"
    >
      <label>
        Strips
        <select
          className="form-control"
          name="bands"
          onChange={[Function]}
          value={6}
        >
          <option
            value={3}
          >
            3
            -strip
          </option>
          <option
            value={4}
          >
            4
            -strip
          </option>
          <option
            value={5}
          >
            5
            -strip
          </option>
          <option
            value={6}
          >
            6
            -strip
          </option>
        </select>
      </label>
    </div>
  </div>
  <div
    className="row"
  >
    <div
      className="col-xs-6 col-sm-2 offset-sm-0"
    >
      <BandSelector
        label="1st Digit"
        name="digit1"
        onChange={[Function]}
        options={
          Array [
            Object {
              "className": "brown",
              "label": "brown",
              "value": 1,
            },
            Object {
              "className": "red",
              "label": "red",
              "value": 2,
            },
            Object {
              "className": "orange",
              "label": "orange",
              "value": 3,
            },
            Object {
              "className": "yellow",
              "label": "yellow",
              "value": 4,
            },
            Object {
              "className": "green",
              "label": "green",
              "value": 5,
            },
            Object {
              "className": "blue",
              "label": "blue",
              "value": 6,
            },
            Object {
              "className": "violet",
              "label": "violet",
              "value": 7,
            },
            Object {
              "className": "gray",
              "label": "gray",
              "value": 8,
            },
            Object {
              "className": "white",
              "label": "white",
              "value": 9,
            },
          ]
        }
        value={1}
      />
    </div>
    <div
      className="col-xs-6 col-sm-2"
    >
      <BandSelector
        label="2nd Digit"
        name="digit2"
        onChange={[Function]}
        options={
          Array [
            Object {
              "className": "black",
              "label": "black",
              "value": 0,
            },
            Object {
              "className": "brown",
              "label": "brown",
              "value": 1,
            },
            Object {
              "className": "red",
              "label": "red",
              "value": 2,
            },
            Object {
              "className": "orange",
              "label": "orange",
              "value": 3,
            },
            Object {
              "className": "yellow",
              "label": "yellow",
              "value": 4,
            },
            Object {
              "className": "green",
              "label": "green",
              "value": 5,
            },
            Object {
              "className": "blue",
              "label": "blue",
              "value": 6,
            },
            Object {
              "className": "violet",
              "label": "violet",
              "value": 7,
            },
            Object {
              "className": "gray",
              "label": "gray",
              "value": 8,
            },
            Object {
              "className": "white",
              "label": "white",
              "value": 9,
            },
          ]
        }
        value={0}
      />
    </div>
    <div
      className="col-xs-6 col-sm-2"
    >
      <BandSelector
        label="3rd Digit"
        name="digit3"
        onChange={[Function]}
        options={
          Array [
            Object {
              "className": "black",
              "label": "black",
              "value": 0,
            },
            Object {
              "className": "brown",
              "label": "brown",
              "value": 1,
            },
            Object {
              "className": "red",
              "label": "red",
              "value": 2,
            },
            Object {
              "className": "orange",
              "label": "orange",
              "value": 3,
            },
            Object {
              "className": "yellow",
              "label": "yellow",
              "value": 4,
            },
            Object {
              "className": "green",
              "label": "green",
              "value": 5,
            },
            Object {
              "className": "blue",
              "label": "blue",
              "value": 6,
            },
            Object {
              "className": "violet",
              "label": "violet",
              "value": 7,
            },
            Object {
              "className": "gray",
              "label": "gray",
              "value": 8,
            },
            Object {
              "className": "white",
              "label": "white",
              "value": 9,
            },
          ]
        }
        value={0}
      />
    </div>
    <div
      className="col-xs-6 col-sm-2"
    >
      <BandSelector
        label="Multiplier"
        name="multiplier"
        onChange={[Function]}
        options={
          Array [
            Object {
              "className": "black",
              "label": "black",
              "value": 0,
            },
            Object {
              "className": "brown",
              "label": "brown",
              "value": 1,
            },
            Object {
              "className": "red",
              "label": "red",
              "value": 2,
            },
            Object {
              "className": "orange",
              "label": "orange",
              "value": 3,
            },
            Object {
              "className": "yellow",
              "label": "yellow",
              "value": 4,
            },
            Object {
              "className": "green",
              "label": "green",
              "value": 5,
            },
            Object {
              "className": "blue",
              "label": "blue",
              "value": 6,
            },
            Object {
              "className": "violet",
              "label": "violet",
              "value": 7,
            },
            Object {
              "className": "gray",
              "label": "gray",
              "value": 8,
            },
            Object {
              "className": "white",
              "label": "white",
              "value": 9,
            },
            Object {
              "className": "gold",
              "label": "gold",
              "value": -1,
            },
            Object {
              "className": "silver",
              "label": "silver",
              "value": -2,
            },
          ]
        }
        value={0}
      />
    </div>
    <div
      className="col-xs-6 col-sm-2"
    >
      <BandSelector
        label="Tolerance"
        name="tolerance"
        onChange={[Function]}
        options={
          Array [
            Object {
              "className": "brown",
              "label": "brown",
              "value": 1,
            },
            Object {
              "className": "red",
              "label": "red",
              "value": 2,
            },
            Object {
              "className": "green",
              "label": "green",
              "value": 0.5,
            },
            Object {
              "className": "blue",
              "label": "blue",
              "value": 0.25,
            },
            Object {
              "className": "violet",
              "label": "violet",
              "value": 0.1,
            },
            Object {
              "className": "gold",
              "label": "gold",
              "value": 5,
            },
            Object {
              "className": "silver",
              "label": "silver",
              "value": 10,
            },
          ]
        }
        value={5}
      />
    </div>
    <div
      className="col-xs-6 col-sm-2"
    >
      <BandSelector
        label="Temp. Coef."
        name="tempCoef"
        onChange={[Function]}
        options={
          Array [
            Object {
              "className": "black",
              "label": "black",
              "value": 250,
            },
            Object {
              "className": "brown",
              "label": "brown",
              "value": 100,
            },
            Object {
              "className": "red",
              "label": "red",
              "value": 50,
            },
            Object {
              "className": "orange",
              "label": "orange",
              "value": 15,
            },
            Object {
              "className": "yellow",
              "label": "yellow",
              "value": 25,
            },
            Object {
              "className": "green",
              "label": "green",
              "value": 20,
            },
            Object {
              "className": "blue",
              "label": "blue",
              "value": 10,
            },
            Object {
              "className": "violet",
              "label": "violet",
              "value": 5,
            },
            Object {
              "className": "gray",
              "label": "gray",
              "value": 1,
            },
          ]
        }
        value={15}
      />
    </div>
  </div>
</form>
`;
